--- a/index.html
+++ b/index.html
@@ -72,95 +72,97 @@
         }
     </style>
 </head>
-<body class="bg-gradient-to-br from-blue-100 to-purple-100 min-h-screen flex items-center justify-center p-1 sm:p-2">
-    <div class="bg-white p-2 sm:p-4 rounded-xl shadow-2xl w-full max-w-full md:max-w-4xl lg:max-w-5xl flex flex-col md:flex-row items-start md:items-stretch space-y-4 md:space-y-0 md:space-x-4">
+<body class="bg-gradient-to-br from-blue-100 to-purple-100 min-h-screen p-1 sm:p-2">
+    <div class="flex flex-col items-center w-full">
+        <div class="bg-white p-2 sm:p-4 rounded-xl shadow-2xl w-full max-w-full md:max-w-4xl lg:max-w-5xl flex flex-col md:flex-row items-start md:items-stretch space-y-4 md:space-y-0 md:space-x-4">
 
-        <div class="w-full md:w-1/2 flex flex-col">
-            <h1 class="text-xl sm:text-2xl font-extrabold text-gray-800 mb-2 sm:mb-4 text-center">Mortgage Calculator</h1>
+            <div class="w-full md:w-1/2 flex flex-col">
+                <h1 class="text-xl sm:text-2xl font-extrabold text-gray-800 mb-2 sm:mb-4 text-center">Mortgage Calculator</h1>
 
-            <div class="space-y-1 sm:space-y-2 flex-grow">
-                <div>
-                    <label for="principal" class="block text-xxs sm:text-xs font-medium text-gray-700 mb-0">Principal Loan Amt ($)</label>
-                    <input type="number" id="principal" value="300000" min="0" class="w-full p-1 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-150 ease-in-out text-sm">
+                <div class="space-y-1 sm:space-y-2 flex-grow">
+                    <div>
+                        <label for="principal" class="block text-xxs sm:text-xs font-medium text-gray-700 mb-0">Principal Loan Amt ($)</label>
+                        <input type="number" id="principal" value="300000" min="0" class="w-full p-1 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-150 ease-in-out text-sm">
+                    </div>
+
+                    <div>
+                        <label for="interestRate" class="block text-xxs sm:text-xs font-medium text-gray-700 mb-0">Annual Interest Rate (%)</label>
+                        <input type="number" id="interestRate" value="3.5" step="0.01" min="0" class="w-full p-1 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-150 ease-in-out text-sm">
+                    </div>
+
+                    <div class="flex space-x-1 sm:space-x-2">
+                        <div class="flex-1">
+                            <label for="loanTerm" class="block text-xxs sm:text-xs font-medium text-gray-700 mb-0">Loan Term (Yrs)</label>
+                            <input type="number" id="loanTerm" value="30" min="1" class="w-full p-1 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-150 ease-in-out text-sm">
+                        </div>
+                        <div class="flex-1">
+                            <label for="downPayment" class="block text-xxs sm:text-xs font-medium text-gray-700 mb-0">Down Payment (%)</label>
+                            <input type="number" id="downPayment" value="20" min="0" max="100" class="w-full p-1 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-150 ease-in-out text-sm">
+                        </div>
+                    </div>
+
+                    <div class="flex space-x-1 sm:space-x-2">
+                        <div class="flex-1">
+                            <label for="homeInsurance" class="block text-xxs sm:text-xs font-medium text-gray-700 mb-0">Home Insurance ($)</label>
+                            <input type="number" id="homeInsurance" value="100" min="0" class="w-full p-1 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-150 ease-in-out text-sm">
+                        </div>
+                        <div class="flex-1">
+                            <label for="hoa" class="block text-xxs sm:text-xs font-medium text-gray-700 mb-0">HOA ($)</label>
+                            <input type="number" id="hoa" value="50" min="0" class="w-full p-1 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-150 ease-in-out text-sm">
+                        </div>
+                    </div>
+
+                    <div>
+                        <label for="propertyTax" class="block text-xxs sm:text-xs font-medium text-gray-700 mb-0">Property Tax (Half-Yearly $)</label>
+                        <input type="number" id="propertyTax" value="2400" min="0" class="w-full p-1 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-150 ease-in-out text-sm">
+                    </div>
                 </div>
 
-                <div>
-                    <label for="interestRate" class="block text-xxs sm:text-xs font-medium text-gray-700 mb-0">Annual Interest Rate (%)</label>
-                    <input type="number" id="interestRate" value="3.5" step="0.01" min="0" class="w-full p-1 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-150 ease-in-out text-sm">
-                </div>
+                <button id="calculateBtn" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-1 sm:py-2 px-3 rounded-lg shadow-md transition duration-300 ease-in-out transform hover:scale-105 text-sm sm:text-base mt-2 sm:mt-4">
+                    Calculate Mortgage
+                </button>
 
-                <div class="flex space-x-1 sm:space-x-2">
-                    <div class="flex-1">
-                        <label for="loanTerm" class="block text-xxs sm:text-xs font-medium text-gray-700 mb-0">Loan Term (Yrs)</label>
-                        <input type="number" id="loanTerm" value="30" min="1" class="w-full p-1 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-150 ease-in-out text-sm">
-                    </div>
-                    <div class="flex-1">
-                        <label for="downPayment" class="block text-xxs sm:text-xs font-medium text-gray-700 mb-0">Down Payment (%)</label>
-                        <input type="number" id="downPayment" value="20" min="0" max="100" class="w-full p-1 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-150 ease-in-out text-sm">
-                    </div>
-                </div>
-
-                <div class="flex space-x-1 sm:space-x-2">
-                    <div class="flex-1">
-                        <label for="homeInsurance" class="block text-xxs sm:text-xs font-medium text-gray-700 mb-0">Home Insurance ($)</label>
-                        <input type="number" id="homeInsurance" value="100" min="0" class="w-full p-1 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-150 ease-in-out text-sm">
-                    </div>
-                    <div class="flex-1">
-                        <label for="hoa" class="block text-xxs sm:text-xs font-medium text-gray-700 mb-0">HOA ($)</label>
-                        <input type="number" id="hoa" value="50" min="0" class="w-full p-1 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-150 ease-in-out text-sm">
-                    </div>
-                </div>
-
-                <div>
-                    <label for="propertyTax" class="block text-xxs sm:text-xs font-medium text-gray-700 mb-0">Property Tax (Half-Yearly $)</label>
-                    <input type="number" id="propertyTax" value="2400" min="0" class="w-full p-1 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-150 ease-in-out text-sm">
+                <div id="errorMessage" class="mt-2 sm:mt-4 p-2 sm:p-3 bg-red-100 text-red-700 rounded-lg hidden text-xs">
+                    Please fill in all fields with valid positive numbers.
                 </div>
             </div>
 
-            <button id="calculateBtn" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-1 sm:py-2 px-3 rounded-lg shadow-md transition duration-300 ease-in-out transform hover:scale-105 text-sm sm:text-base mt-2 sm:mt-4">
-                Calculate Mortgage
-            </button>
+            <div class="w-full md:w-1/2 flex flex-col justify-center">
+                <div id="results" class="p-2 sm:p-4 bg-blue-50 rounded-xl border border-blue-200 hidden">
+                    <h2 class="text-base sm:text-lg font-semibold text-gray-800 mb-1 sm:mb-2 text-center">Your Estimated Monthly Payment:</h2>
+                    <p class="text-2xl sm:text-3xl font-extrabold text-blue-700 text-center mb-1 sm:mb-2" id="monthlyPaymentResult">$0.00</p>
+                    <div class="text-xxs sm:text-xs text-gray-600 space-y-0.5">
+                        <p><span class="font-medium">P&I:</span> <span id="pAndIResult"></span></p>
+                        <p><span class="font-medium">Insurance:</span> <span id="insuranceResult"></span></p>
+                        <p><span class="font-medium">HOA:</span> <span id="hoaResult"></span></p>
+                        <p><span class="font-medium">Tax (Monthly):</span> <span id="taxResult"></span></p>
+                    </div>
 
-            <div id="errorMessage" class="mt-2 sm:mt-4 p-2 sm:p-3 bg-red-100 text-red-700 rounded-lg hidden text-xs">
-                Please fill in all fields with valid positive numbers.
+                    <div class="mt-4 sm:mt-6 flex justify-center">
+                        <canvas id="mortgagePieChart" class="w-full h-[200px] sm:h-[250px]"></canvas>
+                    </div>
+                </div>
             </div>
         </div>
 
-        <div class="w-full md:w-1/2 flex flex-col justify-center">
-            <div id="results" class="p-2 sm:p-4 bg-blue-50 rounded-xl border border-blue-200 hidden">
-                <h2 class="text-base sm:text-lg font-semibold text-gray-800 mb-1 sm:mb-2 text-center">Your Estimated Monthly Payment:</h2>
-                <p class="text-2xl sm:text-3xl font-extrabold text-blue-700 text-center mb-1 sm:mb-2" id="monthlyPaymentResult">$0.00</p>
-                <div class="text-xxs sm:text-xs text-gray-600 space-y-0.5">
-                    <p><span class="font-medium">P&I:</span> <span id="pAndIResult"></span></p>
-                    <p><span class="font-medium">Insurance:</span> <span id="insuranceResult"></span></p>
-                    <p><span class="font-medium">HOA:</span> <span id="hoaResult"></span></p>
-                    <p><span class="font-medium">Tax (Monthly):</span> <span id="taxResult"></span></p>
-                </div>
-
-                <div class="mt-4 sm:mt-6 flex justify-center">
-                    <canvas id="mortgagePieChart" class="w-full h-[200px] sm:h-[250px]"></canvas>
-                </div>
+        <div id="amortizationScheduleContainer" class="bg-white p-2 sm:p-4 rounded-xl shadow-2xl w-full max-w-full md:max-w-4xl lg:max-w-5xl mt-4 hidden">
+            <h2 class="text-xl sm:text-2xl font-extrabold text-gray-800 mb-4 text-center">Amortization Schedule</h2>
+            <div class="overflow-x-auto">
+                <table class="w-full text-xxs sm:text-xs border-collapse amortization-table">
+                    <thead>
+                        <tr>
+                            <th>Month</th>
+                            <th>Starting Balance</th>
+                            <th>Payment</th>
+                            <th>Interest Paid</th>
+                            <th>Principal Paid</th>
+                            <th>Ending Balance</th>
+                        </tr>
+                    </thead>
+                    <tbody id="amortizationTableBody">
+                        </tbody>
+                </table>
             </div>
-        </div>
-    </div>
-
-    <div id="amortizationScheduleContainer" class="bg-white p-2 sm:p-4 rounded-xl shadow-2xl w-full max-w-full md:max-w-4xl lg:max-w-5xl mt-4 hidden">
-        <h2 class="text-xl sm:text-2xl font-extrabold text-gray-800 mb-4 text-center">Amortization Schedule</h2>
-        <div class="overflow-x-auto">
-            <table class="w-full text-xxs sm:text-xs border-collapse amortization-table">
-                <thead>
-                    <tr>
-                        <th>Month</th>
-                        <th>Starting Balance</th>
-                        <th>Payment</th>
-                        <th>Interest Paid</th>
-                        <th>Principal Paid</th>
-                        <th>Ending Balance</th>
-                    </tr>
-                </thead>
-                <tbody id="amortizationTableBody">
-                    </tbody>
-            </table>
         </div>
     </div>
 
